corrigindo bug no vertical-align do flex-box da tela de personagens

--- a/src/app/characters/characters-details/characters-details.component.scss
+++ b/src/app/characters/characters-details/characters-details.component.scss
@@ -11,3 +11,7 @@ h4 {
   padding-top: 15px;
   font-weight: bold;
 }
+
+.buttonReturn {
+  text-align: center;
+}
